XSTOUCAN-1: Create Toucan skin from xwiki.org Fixed: Dragged panels jump a few pixels to the right
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk/toucan@7776 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-toucan/src/main/resources/toucan/style.css
+++ b/xwiki-platform-toucan/src/main/resources/toucan/style.css
@@ -1438,13 +1438,16 @@ html > body .panels{
   color: #000;
   width: 190px;
   display: block;
-  margin: 0px 0px 10px 10px;
   padding: 0px;
   background-color: transparent;
 }
 #leftPanels .panel,#leftPanels .fakepanel{
   margin: 0px 0px 10px 20px;
 }
+#rightPanels .panel,#rightPanels .fakepanel{
+  margin: 0px 0px 10px 10px;
+}
+
 .fakepanel{
   display: none;
   height: 320px;
